# SimGL

./: Build.bat  CMakeLists.txt  README.md  main.cpp  setup.txt
Engine/Core/: Application.cpp  Application.h  DeltaTime.h  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  RenderDispatcher.cpp  RenderDispatcher.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Playground/: Playground.h
Playground/src/: ExampleLayer.cpp  ExampleLayer.h
